[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/levels/Test Grove/Level Test Grove.gd" type="Script" id=1]
[ext_resource path="res://scenes/UI/fade transition.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/level geometry/Test Grove/Test Grove.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/objects/Loading Zone.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/objects/Void Plane.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Player/Player 1st Person.tscn" type="PackedScene" id=6]






[node name="Level Test Grove" type="Spatial"]
pause_mode = 2
script = ExtResource( 1 )

[node name="FadeTransition" parent="." instance=ExtResource( 2 )]

[node name="Test Grove" parent="." instance=ExtResource( 3 )]
pause_mode = 1

[node name="Loading Zone" parent="." instance=ExtResource( 4 )]
transform = Transform( 1.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 8, 4, 0 )

[node name="Void Plane" parent="." instance=ExtResource( 5 )]
transform = Transform( 100, 0, 0, 0, 1, 0, 0, 0, 100, 0, -144, 0 )

[node name="Player" parent="." instance=ExtResource( 6 )]
[connection signal="body_entered" from="Loading Zone" to="." method="_on_Loading_Zone_body_entered"]
[connection signal="body_entered" from="Void Plane" to="." method="_on_Void_Plane_body_entered"]
